--- a/index.html
+++ b/index.html
@@ -22,82 +22,52 @@
 			<div class="swiper-wrapper slider__wrapper">
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video controls loop autoplay preload="true" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
-							<source src="video/first.mp4" type="video/mp4">
-						</source>
-						</video>
+						<video src="video/first.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video controls loop autoplay preload="true" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
-							<source src="video/second.mp4" type="video/mp4">
-						</source>
-						</video>
+						<video src="video/second.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video controls loop autoplay preload="true" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
-							<source src="video/third.mp4" type="video/mp4">
-						</source>
-						</video>
+						<video src="video/third.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video controls loop autoplay preload="true" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
-							<source src="video/fourth.mp4" type="video/mp4">
-						</source>
-						</video>
+						<video src="video/fourth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video controls loop autoplay preload="true" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
-							<source src="video/fifth.mp4" type="video/mp4">
-						</source>
-						</video>
+						<video src="video/fifth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video controls loop autoplay preload="true" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
-							<source src="video/sixth.mp4" type="video/mp4">
-						</source>
-						</video>
+						<video src="video/sixth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video controls loop autoplay preload="true" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
-							<source src="video/seventh.mp4" type="video/mp4">
-						</source>
-						</video>
+						<video src="video/seventh.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video controls loop autoplay preload="true" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
-							<source src="video/eighth.mp4" type="video/mp4">
-						</source>
-						</video>
+						<video src="video/eighth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video controls loop autoplay preload="true" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
-							<source src="video/nineth.mp4" type="video/mp4">
-						</source>
-						</video>
+						<video src="video/nineth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video controls loop autoplay preload="true" onmouseover="this.play()" onmouseout="this.pause();this.currentTime=0;">
-							<source src="video/tenth.mp4" type="video/mp4">
-						</source>
-						</video>
+						<video src="video/tenth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
 					</div>
 				</div>
 			</div>
