--- a/index.html
+++ b/index.html
@@ -22,52 +22,52 @@
 			<div class="swiper-wrapper slider__wrapper">
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video src="video/first.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
+						<video src="video/first.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause(); this.currentTime=0;">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video src="video/second.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
+						<video src="video/second.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause(); this.currentTime=0;">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video src="video/third.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
+						<video src="video/third.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause(); this.currentTime=0;">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video src="video/fourth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
+						<video src="video/fourth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause(); this.currentTime=0;">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video src="video/fifth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
+						<video src="video/fifth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause(); this.currentTime=0;">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video src="video/sixth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
+						<video src="video/sixth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause(); this.currentTime=0;">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video src="video/seventh.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
+						<video src="video/seventh.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause(); this.currentTime=0;">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video src="video/eighth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
+						<video src="video/eighth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause(); this.currentTime=0;">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video src="video/nineth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
+						<video src="video/nineth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause(); this.currentTime=0;">
 					</div>
 				</div>
 				<div class="swiper-slide slider__item" id="videosList">
 					<div class="videowrapper">
-						<video src="video/tenth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause();">
+						<video src="video/tenth.mp4" loop preload="true" onmouseover="this.play()" onmouseout="this.pause(); this.currentTime=0;">
 					</div>
 				</div>
 			</div>
